--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,28 +127,28 @@ jobs:
 
   PyTorch-v1_3:
     docker:
-      - image: circleci/python:3.6
+      - image: pytorchlightning/pytorch_lightning:devel-pt1.3
     environment:
       - TORCH_VERSION: "torch>=1.3, <1.4"
     steps: *steps
 
   PyTorch-v1_4:
     docker:
-      - image: circleci/python:3.6
+      - image: pytorchlightning/pytorch_lightning:devel-pt1.4
     environment:
       - TORCH_VERSION: "torch>=1.4, <1.5"
     steps: *steps
 
   PyTorch-v1_5:
     docker:
-      - image: circleci/python:3.6
+      - image: pytorchlightning/pytorch_lightning:devel-pt1.5
     environment:
       - TORCH_VERSION: "torch>=1.5, <1.6"
     steps: *steps
 
   Examples:
     docker:
-      - image: circleci/python:3.7
+      - image: pytorchlightning/pytorch_lightning:devel-pt1.4
     environment:
         - TORCH_VERSION: "torch"
         - SPHINX_MOCK_REQUIREMENTS: 0
