--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
     docker:
       - image: circleci/python:3.7
     environment:
-        - TORCH_VERSION: "torch"
+      - TORCH_VERSION: "torch"
     steps:
       - checkout
       - *format
@@ -124,6 +124,20 @@ jobs:
           path: test-reports
       - store_artifacts:
           path: test-reports
+
+  PyTorch-v1_1:
+    docker:
+      - image: pytorchlightning/pytorch_lightning:devel-pt1.1
+    environment:
+      - TORCH_VERSION: "torch>=1.1, <1.2"
+    steps: *steps
+
+  PyTorch-v1_2:
+    docker:
+      - image: pytorchlightning/pytorch_lightning:devel-pt1.2
+    environment:
+      - TORCH_VERSION: "torch>=1.2, <1.3"
+    steps: *steps
 
   PyTorch-v1_3:
     docker:
