--- a/.drone.yml
+++ b/.drone.yml
@@ -38,6 +38,8 @@ steps:
     #- pip install -r ./docs/requirements.txt --user -q
     - pip list
     - python -c "import torch ; print(' & '.join([torch.cuda.get_device_name(i) for i in range(torch.cuda.device_count())]) if torch.cuda.is_available() else 'only CPU')"
+    - wget https://raw.githubusercontent.com/pytorch/pytorch/master/torch/utils/collect_env.py
+    - python collect_env.py
     - coverage run --source pytorch_lightning -m py.test pytorch_lightning tests benchmarks -v --doctest-modules #  --flake8
     #- cd docs; make doctest; make coverage
     - coverage report
