--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,20 +125,6 @@ jobs:
       - store_artifacts:
           path: test-reports
 
-  PyTorch-v1_1:
-    docker:
-      - image: pytorchlightning/pytorch_lightning:devel-pt1.1
-    environment:
-      - TORCH_VERSION: "torch>=1.1, <1.2"
-    steps: *steps
-
-  PyTorch-v1_2:
-    docker:
-      - image: pytorchlightning/pytorch_lightning:devel-pt1.2
-    environment:
-      - TORCH_VERSION: "torch>=1.2, <1.3"
-    steps: *steps
-
   PyTorch-v1_3:
     docker:
       - image: pytorchlightning/pytorch_lightning:devel-pt1.3
@@ -158,6 +144,13 @@ jobs:
       - image: pytorchlightning/pytorch_lightning:devel-pt1.5
     environment:
       - TORCH_VERSION: "torch>=1.5, <1.6"
+    steps: *steps
+
+  PyTorch-v1_6:
+    docker:
+      - image: pytorchlightning/pytorch_lightning:devel-pt1.6
+    environment:
+      - TORCH_VERSION: "torch>=1.6, <1.7"
     steps: *steps
 
   Examples:
@@ -192,5 +185,6 @@ workflows:
       - PyTorch-v1_3
       - PyTorch-v1_4
       - PyTorch-v1_5
+      - PyTorch-v1_6
       - Install-pkg
       - Examples
