--- a/.drone.yml
+++ b/.drone.yml
@@ -38,7 +38,7 @@ steps:
     #- pip install -r ./docs/requirements.txt --user -q
     - pip list
     - python -c "import torch ; print(' & '.join([torch.cuda.get_device_name(i) for i in range(torch.cuda.device_count())]) if torch.cuda.is_available() else 'only CPU')"
-    - coverage run --source pytorch_lightning -m py.test pytorch_lightning tests benchmarks -v  # --flake8
+    - coverage run --source pytorch_lightning -m py.test pytorch_lightning tests benchmarks -v  --durations=25 # --flake8
     #- cd docs; make doctest; make coverage
     - coverage report
     - codecov --token $CODECOV_TOKEN  # --pr $DRONE_PULL_REQUEST --build $DRONE_BUILD_NUMBER --branch $DRONE_BRANCH --commit $DRONE_COMMIT --tag $DRONE_TAG
