--- a/.github/workflows/code-formatting.yml
+++ b/.github/workflows/code-formatting.yml
@@ -1,5 +1,13 @@
-name: "Check Formatting"
-on: [push, pull_request]
+name: "Check Formatting - Black"
+on:
+  # Trigger the workflow on push or pull request,
+  # but only for the master branch
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   check_code_formatting:
