--- a/tests/requirements-devel.txt
+++ b/tests/requirements-devel.txt
@@ -4,4 +4,4 @@
 # extended list of dependencies dor development and run lint and tests
 -r ./requirements.txt
 
-cloudpickle==1.1.1
+cloudpickle>=1.2
